Fixed testDistinct to run against 26.1 server.